--- a/packages/integrations/package.json
+++ b/packages/integrations/package.json
@@ -34,7 +34,6 @@
     "@homarr/translation": "workspace:^0.1.0",
     "@homarr/validation": "workspace:^0.1.0",
     "@jellyfin/sdk": "^0.10.0",
-    "@types/xml2js": "^0.4.14",
     "xml2js": "^0.6.2"
   },
   "devDependencies": {
@@ -42,6 +41,7 @@
     "@homarr/prettier-config": "workspace:^0.1.0",
     "@homarr/tsconfig": "workspace:^0.1.0",
     "eslint": "^9.13.0",
-    "typescript": "^5.6.3"
+    "typescript": "^5.6.3",
+    "@types/xml2js": "^0.4.14"
   }
 }
