--- a/packages/server-settings/package.json
+++ b/packages/server-settings/package.json
@@ -21,6 +21,10 @@
     "typecheck": "tsc --noEmit"
   },
   "prettier": "@homarr/prettier-config",
+  "dependencies": {
+    "@homarr/definitions": "workspace:^0.1.0",
+    "@homarr/translation": "workspace:^0.1.0"
+  },
   "devDependencies": {
     "@homarr/eslint-config": "workspace:^0.2.0",
     "@homarr/prettier-config": "workspace:^0.1.0",
