--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -15,10 +15,9 @@ jobs:
     steps:
       - name: Check for e2e-skip label
         id: check_skip
+        if: contains(github.event.pull_request.labels.*.name, 'e2e-skip')
         run: |
-          if [[ "$(echo '${{ github.event.pull_request.labels }}' | jq -r '.[].name')" == *"e2e-skip"* ]]; then
-            echo "E2E tests skipped due to e2e-skip label"
-            exit 0
-          fi
+          echo "E2E tests skipped due to e2e-skip label"
+          exit 0
       - name: Run E2E Tests
         run: echo "E2E tests would run because the e2e-ready label was added"
