--- a/.github/actions/e2e-execution/action.yml
+++ b/.github/actions/e2e-execution/action.yml
@@ -19,6 +19,6 @@ runs:
         SKIP_ENV_VALIDATION: true
 
     - name: Run E2E Tests
-    - shell: bash
+      shell: bash
       run: |
         echo "Here we would run them with testcontainers"
