--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lint": "turbo lint --continue -- --cache --cache-location node_modules/.cache/.eslintcache",
     "lint:fix": "turbo lint --continue -- --fix --cache --cache-location node_modules/.cache/.eslintcache",
     "lint:ws": "pnpm dlx sherif@latest",
+    "package:new": "turbo gen init",
     "test": "cross-env NODE_ENV=development vitest run --exclude e2e --coverage.enabled ",
     "test:e2e": "cross-env NODE_ENV=development vitest e2e",
     "test:ui": "cross-env NODE_ENV=development vitest --exclude e2e --ui --coverage.enabled",
