--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -9,7 +9,8 @@
     "./client": "./client.ts",
     "./schema/sqlite": "./schema/sqlite.ts",
     "./test": "./test/index.ts",
-    "./queries": "./queries/index.ts"
+    "./queries": "./queries/index.ts",
+    "./validationSchemas": "./validationSchemas.ts"
   },
   "main": "./index.ts",
   "types": "./index.ts",
@@ -46,6 +47,7 @@
     "dotenv": "^16.4.5",
     "drizzle-kit": "^0.28.1",
     "drizzle-orm": "^0.36.4",
+    "drizzle-zod": "^0.5.1",
     "mysql2": "3.11.4"
   },
   "devDependencies": {
