--- a/packages/old-import/package.json
+++ b/packages/old-import/package.json
@@ -5,7 +5,9 @@
   "type": "module",
   "exports": {
     ".": "./index.ts",
-    "./components": "./src/components/index.ts"
+    "./analyse": "./src/analyse/index.ts",
+    "./components": "./src/components/index.ts",
+    "./import": "./src/import/index.ts"
   },
   "typesVersions": {
     "*": {
@@ -22,7 +24,6 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@homarr/api": "workspace:^0.1.0",
     "@homarr/common": "workspace:^0.1.0",
     "@homarr/db": "workspace:^0.1.0",
     "@homarr/definitions": "workspace:^0.1.0",
@@ -34,15 +35,18 @@
     "@homarr/translation": "workspace:^0.1.0",
     "@mantine/core": "7.14.3",
     "@mantine/hooks": "7.14.3",
+    "adm-zip": "0.5.16",
     "react": "18.3.1",
     "next": "15.0.3",
     "superjson": "2.2.1",
-    "zod": "3.23.8"
+    "zod": "3.23.8",
+    "zod-form-data": "2.0.2"
   },
   "devDependencies": {
     "@homarr/eslint-config": "workspace:^0.2.0",
     "@homarr/prettier-config": "workspace:^0.1.0",
     "@homarr/tsconfig": "workspace:^0.1.0",
+    "@types/adm-zip": "0.5.7",
     "eslint": "^9.15.0",
     "typescript": "^5.7.2"
   },
