--- a/packages/old-import/package.json
+++ b/packages/old-import/package.json
@@ -30,15 +30,17 @@
     "@homarr/definitions": "workspace:^0.1.0",
     "@homarr/form": "workspace:^0.1.0",
     "@homarr/log": "workspace:^0.1.0",
+    "@homarr/modals": "workspace:^0.1.0",
+    "@homarr/notifications": "workspace:^0.1.0",
     "@homarr/old-schema": "workspace:^0.1.0",
+    "@homarr/translation": "workspace:^0.1.0",
     "@homarr/ui": "workspace:^0.1.0",
     "@homarr/validation": "workspace:^0.1.0",
-    "@homarr/translation": "workspace:^0.1.0",
     "@mantine/core": "7.14.3",
     "@mantine/hooks": "7.14.3",
     "adm-zip": "0.5.16",
-    "react": "18.3.1",
     "next": "15.0.3",
+    "react": "18.3.1",
     "superjson": "2.2.1",
     "zod": "3.23.8",
     "zod-form-data": "2.0.2"
