--- a/package.json
+++ b/package.json
@@ -45,5 +45,10 @@
   "packageManager": "pnpm@9.14.4",
   "engines": {
     "node": ">=22.12.0"
+  },
+  "pnpm": {
+    "patchedDependencies": {
+      "pretty-print-error": "patches/pretty-print-error.patch"
+    }
   }
 }
