--- a/packages/old-import/package.json
+++ b/packages/old-import/package.json
@@ -36,14 +36,14 @@
     "@homarr/translation": "workspace:^0.1.0",
     "@homarr/ui": "workspace:^0.1.0",
     "@homarr/validation": "workspace:^0.1.0",
-    "@mantine/core": "7.15.0",
-    "@mantine/hooks": "7.15.0",
+    "@mantine/core": "^7.15.0",
+    "@mantine/hooks": "^7.15.0",
     "adm-zip": "0.5.16",
-    "next": "15.0.3",
-    "react": "18.3.1",
+    "next": "14.2.20",
+    "react": "^19.0.0",
     "superjson": "2.2.2",
-    "zod": "3.24.1",
-    "zod-form-data": "2.0.2"
+    "zod": "^3.24.1",
+    "zod-form-data": "^2.0.2"
   },
   "devDependencies": {
     "@homarr/eslint-config": "workspace:^0.2.0",
