--- a/packages/old-import/package.json
+++ b/packages/old-import/package.json
@@ -39,7 +39,7 @@
     "@mantine/core": "^7.15.0",
     "@mantine/hooks": "^7.15.0",
     "adm-zip": "0.5.16",
-    "next": "14.2.20",
+    "next": "^14.2.20",
     "react": "^19.0.0",
     "superjson": "2.2.2",
     "zod": "^3.24.1",
