--- a/packages/old-import/package.json
+++ b/packages/old-import/package.json
@@ -8,7 +8,8 @@
     ".": "./index.ts",
     "./analyse": "./src/analyse/index.ts",
     "./components": "./src/components/index.ts",
-    "./import": "./src/import/index.ts"
+    "./import": "./src/import/index.ts",
+    "./shared": "./src/shared.ts"
   },
   "typesVersions": {
     "*": {
