--- a/packages/old-schema/package.json
+++ b/packages/old-schema/package.json
@@ -22,6 +22,7 @@
   },
   "prettier": "@homarr/prettier-config",
   "dependencies": {
+    "@homarr/common": "workspace:^0.1.0",
     "zod": "^3.24.1"
   },
   "devDependencies": {
